# CharAnime

./: CMakeLists.txt  README.md
src/: main.cc  timer.hpp  util.hpp
src/decoder/: decoderbase.hpp  packagedecoder.hpp  videodecoder.hpp
src/player/: readconfig.hpp  videoplayer.hpp
src/player/videosys/: unixplayer.hpp  winplayer.hpp
src/threadshared/: dataqueue.hpp  datastruct.hpp
